# swagger.yaml
@@ -21,29 +21,72 @@ paths:
             type: "string"
       responses:
         200:
-          description: "200 response"
+          description: "Successful operation"
+          headers:
+            Access-Control-Allow-Headers:
+              $ref: "#/components/headers/Access-Control-Allow-Headers"
+            Access-Control-Allow-Methods:
+              $ref: "#/components/headers/Access-Control-Allow-Methods"
+            Access-Control-Allow-Origin:
+              $ref: "#/components/headers/Access-Control-Allow-Origin"          
           content:
             application/json:
               schema:
                 $ref: "#/components/schemas/ApiResponse"
         400:
           description: "Invalid request body"
+          headers:
+            Access-Control-Allow-Headers:
+              $ref: "#/components/headers/Access-Control-Allow-Headers"
+            Access-Control-Allow-Methods:
+              $ref: "#/components/headers/Access-Control-Allow-Methods"
+            Access-Control-Allow-Origin:
+              $ref: "#/components/headers/Access-Control-Allow-Origin"          
           content: {}
         500:
           description: "Internal server error"
+          headers:
+            Access-Control-Allow-Headers:
+              $ref: "#/components/headers/Access-Control-Allow-Headers"
+            Access-Control-Allow-Methods:
+              $ref: "#/components/headers/Access-Control-Allow-Methods"
+            Access-Control-Allow-Origin:
+              $ref: "#/components/headers/Access-Control-Allow-Origin"          
+          content: {}
       security:
         - ApiCognitoAuthorizer: []              
       x-amazon-apigateway-integration:
         uri: 
           Fn::Sub: arn:aws:apigateway:${AWS::Region}:lambda:path/2015-03-31/functions/${CreateUserFunction.Arn}/invocations  
         responses:
-          default:
-            statusCode: 200
+          "default":
+            statusCode: "200"
+            responseParameters:
+              method.response.header.Access-Control-Allow-Headers : "'Content-Type,X-Amz-Date,Authorization,X-Api-Key'"
+              method.response.header.Access-Control-Allow-Methods : "'*'"
+              method.response.header.Access-Control-Allow-Origin : "'*'"
+            responseTemplates:
+              application/json: 
+                schema:
+                  $ref: "#/components/schemas/ApiResponse"
         passthroughBehavior: "when_no_match"
         httpMethod: "POST"
         contentHandling: "CONVERT_TO_TEXT"
         type: "aws_proxy"
 components:
+  headers:
+    Access-Control-Allow-Headers:
+      description: Access-Control-Allow-Headers
+      schema:
+        type: string
+    Access-Control-Allow-Methods:
+      description: Access-Control-Allow-Methods
+      schema:
+        type: string
+    Access-Control-Allow-Origin:
+      description: Access-Control-Allow-Origin
+      schema:
+        type: string
   securitySchemes:
     ApiCognitoAuthorizer:
       type: apiKey
@@ -73,7 +116,9 @@ components:
         - mobile
     ApiResponse:
       type: object
-      properties: {}
+      properties:
+        message:
+          type: string
 x-amazon-apigateway-request-validators:
   all:
     validateRequestBody: true
